learning-kubernetes/examples/kodekloud-engineer.yaml

apiVersion: v1
kind: Pod
metadata:
  name: time-check
  namespace: xfusion
  labels:
    app: time-check
spec:
  volumes:
    - name: log-volume
      emptyDir: {}
  containers:
    - name: time-check
      image: busybox:latest
      volumeMounts:
        - mountPath: /opt/data/time
          name: log-volume
      command: ["/bin/sh", "-c"]
      args:
        [

          "while true; do date; sleep $TIME_FREQ;done > /opt/data/time/time-check.log",

        ]
