learning-kubernetes/examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nodejs-app
  template:
    metadata:
      labels:
        app: my-nodejs-app
    spec:
      containers:
      - name: my-nodejs-app
        image: sajjadkhan212/simple-hellowrold
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: my-nodejs-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: my-nodejs-app
