learning-kubernetes/examples/go-sampleweb-app-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: go-webapp-service

spec: 
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30001
  selector:
    type: webapp
