learning-kubernetes/examples/persistent-volume-in-kubernetes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nautilus
  labels:
    name: pod-nautilus
spec:
  containers:
    - name: container-nautilus
      image: nginx:latest
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pvc-nautilus
  volumes:
    - name: pvc-nautilus
      persistentVolumeClaim:
        claimName: pvc-nautilus

---
apiVersion: v1
kind: Service
metadata:
  name: web-nautilus
spec:
  type:  NodePort
  selector:
    name: pod-nautilus
  ports:
    - name: http
      nodePort: 30008
      port: 80
  



---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    volumeMounts:
      - name: local-persistent-storage
        mountPath: /var/www/html
  volumes:
    - name: local-persistent-storage
      persistentVolumeClaim:
        claimName: local-pvc
